default/objects/success__Graphic__c/success__Graphic__c.object-meta.xml
<CustomObject>
    <description>The definition for the icons, badges and level graphics that are displayed across the application. The images are specified as a URL and the background colours of the tiles on which these graphic images are optionally presented are specified as a hexadecimal value.</description>
    <label>Graphic</label>
    <nameField>
        <label>Graphic Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Graphics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>