default/objects/success__Graphic__c/fields/success__Attachment_Id__c.field-meta.xml
<CustomField>
    <fullName>success__Attachment_Id__c</fullName>
    <externalId>true</externalId>
    <label>Attachment ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>