default/objects/success__Graphic__c/fields/success__Background_Colour__c.field-meta.xml
<CustomField>
    <fullName>success__Background_Colour__c</fullName>
    <description>Background colour used in the tiles containing an image across the app</description>
    <inlineHelpText>Graphics images will be place on coloured tiles if a colour is defined using a six digit hexadecimal format (e.g. #FFCC00)</inlineHelpText>
    <label>Background Colour</label>
    <length>255</length>
    <type>Text</type>
</CustomField>