default/objects/success__Graphic__c/fields/success__Image__c.field-meta.xml
<CustomField>
    <fullName>success__Image__c</fullName>
    <formula>IMAGE( success__Image_URL__c , &quot;Image&quot;)</formula>
    <label>Image</label>
    <type>Text</type>
</CustomField>