default/objects/success__Graphic__c/fields/success__Image_URL__c.field-meta.xml
<CustomField>
    <fullName>success__Image_URL__c</fullName>
    <inlineHelpText>Paste a valid image URL. Images should be a minimum of 60x60 pixels to ensure adequate resolution (larger sizes will take longer to display). Images should also be square to avoid image distortion</inlineHelpText>
    <label>Image URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>