default/objects/success__Graphic__c/fields/success__Type__c.field-meta.xml
<CustomField>
    <fullName>success__Type__c</fullName>
    <description>Icons are used for the standard elements across the app, whilst badges are used to define badge types (used on achievements when specifying rewards)</description>
    <inlineHelpText>Specifying a graphical element &#39;type&#39; will ensure that it is only displayed in the relevant place</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Badge</fullName>
                <default>true</default>
                <label>Badge</label>
            </value>
            <value>
                <fullName>Icon</fullName>
            </value>
            <value>
                <fullName>Level</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>