default/objects/success__Graphic__c/validationRules/success__Background_Colour_Length.validationRule-meta.xml
<ValidationRule>
    <fullName>success__Background_Colour_Length</fullName>
    <active>true</active>
    <description>Restict length to 7 characters (6 number characters plus the hash)</description>
    <errorConditionFormula>NOT(
OR(
ISBLANK(success__Background_Colour__c),
REGEX( UPPER(success__Background_Colour__c) , &quot;#[0-9A-F]{6}&quot;)
)
)</errorConditionFormula>
    <errorMessage>Background Colour: You can&#39;t use more than 7 characters (6 number characters plus the hash).</errorMessage>
</ValidationRule>