default/objects/success__Graphic__c/listViews/success__All.listView-meta.xml
<ListView>
    <fullName>success__All</fullName>
    <columns>NAME</columns>
    <columns>success__Type__c</columns>
    <columns>success__Background_Colour__c</columns>
    <columns>success__Image_URL__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>